rename to json-functify"

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "functify",
+  "name": "json-functify",
   "version": "1.0.0",
   "description": "A module for stringify with functions",
   "main": "index.js",
